# internal/model/user.go
@@ -8,7 +8,7 @@ import (
 type User struct {
 	ID          uint         `json:"id" gorm:"primaryKey" example:"1"`
 	authnID     []byte       `json:"-" gorm:"column:web_authn_id;uniqueIndex;not null"`
-	Username    *string      `json:"username" gorm:"uniqueIndex" example:"john_doe"`
+	Username    *string      `json:"username" example:"john_doe"`
 	Icon        string       `json:"icon" example:"https://example.com/avatar.png"`
 	Credentials []Credential `json:"-" gorm:"foreignKey:UserID"`
 	CreatedAt   time.Time    `json:"created_at" example:"2026-03-26T10:30:00Z"`
